--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -1,7 +1,7 @@
 server {
 
 	listen 80;
-	server_name intwebred.alamy.com; # Internal hostnames included for internal alerting/testing only
+	server_name $domain.alamy.com; # Internal hostnames included for internal alerting/testing only
 
 	limit_req zone=http_req_limit burst=250 nodelay; # burst=250 allows 250 simultaneous requests to be responded to as long as they stay within overall rate limit defined in http context
 	limit_req zone=http_req_limit_exceptions burst=250 nodelay; # Excempted rate limit defined in http config
