--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -30,7 +30,7 @@ server {
 		proxy_pass https://$c7;
 	}
 
-	location ~* ^/contributor/de/(.*) { # Redirect contributor/de requests to https://stagingweb.alamy.de/contributor
+	location ~* ^/contributor/de/(.*) { # Redirect contributor/de requests to https://$domain.alamy.de/contributor
 		return 301 https://$domain.alamy.de/contributor/$1$is_args$args;
 	}
 
@@ -51,12 +51,7 @@ server {
 server {
 
 	listen 443 ssl http2;
-	server_name $domain.alamy.com tcgwvip01.alamy.com tcsvrgw03.alamy.com tcsvrgw04.alamy.com; # Internal hostnames included for internal alerting/testing only
-	server_name cflare.alamy.com; # Accept domain for CloudFlare testing
-
-	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
-
+	server_name $domain.alamy.com; # Internal hostnames included for internal alerting/testing only
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
 	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
 
@@ -64,10 +59,6 @@ server {
 
 	limit_req zone=http_req_limit burst=1000 nodelay; # burst=1000 allows 1000 simultaneous requests to be responded to as long as they stay within overall rate limit defined in http context
 	limit_req zone=http_req_limit_exceptions burst=1000 nodelay; # Excempted rate limit defined in http config
-
-	if ($unwanted_agent) { # 444 is a Nginx specific status code which returns no data to the requestor
-		return 444;
-	}
 
 	location ~* ^/(applicationvariableeditor[.]aspx|applicationvariableeditorforbot[.]aspx|applicationvariableeditor-arm[.]aspx|mediacomp/applicationvariableeditor[.]aspx|mediacomp/applicationvariableeditorforbot[.]aspx|mediacomp/applicationvariableeditor-arm[.]aspx|appviewer[.]aspx|artcomusers[.]xml|cache[.]asp|clientip[.]asp|clientip2[.]asp|set-trace[.]aspx|constringeditor[.]aspx|geoip[.]asp|refreshfraudwhitelist[.]asp|refresh-pricing[.]asp|serverheaders[.]asp|servervariable[.]asp|stopwords[.]xml|webconfigeditor[.]aspx|captcha/|deutsch/(stopwords[.]xml|downloadimage/refreshfraudwhiteList[.]aspx)|downloadimage/(test[.]aspx|refreshfraudwhitelist[.]aspx|geoiptest[.]aspx)|mediacomp/(generatecidoruserid[.]aspx|alamyrefwords[.]aspx)|myimages_v2[.]4/reports/rpt_ascategory[.]aspx|forcelogon[.]asp|mediacomp/StopWords[.]aspx|pressrelease/(login[.]aspx|admin/password[.]aspx)|purchase/creditcardpurchase[.]asmx/addccforcustomer) { # Block external access to specific files on Web servers
 		include includes/ipsets/internal-networks;
@@ -182,12 +173,6 @@ server {
 		proxy_set_header Host $c7; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
 		proxy_pass https://$c7;
-
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
-	}
-
-	location ~* ^/yaa/ { # YAA rule as per ticket #203185
-		proxy_pass http://tcsvrweb24.alamy.com:8088; # New IIS site available on tcsvrweb24
 
 		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
