--- a/enabled-sites/alamy.int.conf
+++ b/enabled-sites/alamy.int.conf
@@ -1,7 +1,7 @@
 server { # Redirect http requests to https
 
 	listen 80;
-	server_name $domain.es $domain.it $domain.uk $domainimages.fr;
+	server_name $domain.alamy.es $domain.alamy.it $domain.alamy.uk $domain.alamyimages.fr;
 
 	# Allow by default, block access from blacklisted IPs
 	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -11,8 +11,6 @@ server { # Redirect http requests to https
 
 	limit_req zone=http_req_limit burst=50 nodelay; # Default rate limit defined in http config
 	limit_req zone=http_req_limit_exceptions burst=50 nodelay; # Excempted rate limit defined in http config
-
-	status_zone $domain.international; # Shared memory zone for Nginx Plus dashboard to display stats for domains that match this Virtual Server config
 
 	if ($unwanted_agent) { # 444 is a Nginx specific status code which returns no data to the requestor
 		return 444;
@@ -25,7 +23,7 @@ server { # Redirect http requests to https
 server {
 
 	listen 443 ssl http2;
-	server_name ~^(www)[.](alamy|alamyimages)[.](?<tld>es|fr|it|uk)$; # All International www. requests will use this config, <tld> named regex group used to extract to a variable the domain requested
+	server_name ~^($domain)[.](alamy|alamyimages)[.](?<tld>es|fr|it|uk)$; # All International requests will use this config, <tld> named regex group used to extract to a variable the domain requested
 
 	# Allow by default, block access from blacklisted IPs
 	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
