--- a/enabled-sites/intranet.alamy.int.conf
+++ b/enabled-sites/intranet.alamy.int.conf
@@ -1,48 +1,63 @@
 server { # Redirect http requests to https
 
 	listen 80;
-	server_name intintranetred.alamy.* intintranetred.alamyimages.*;
+	server_name intranet.alamy.* intranet.alamyimages.*;
 
-	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
-	
+	include includes/ipsets/internal-networks; # Permit access from internal network IP ranges
+	include includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
+	deny all; # Deny by default
+
+	status_zone intranet.alamy.international; # Shared memory zone for Nginx Plus dashboard to display stats for domains that match this Virtual Server config
+
 	return 301 https://$host$request_uri;
 
 }
 
-server { 
-	
+server {
+
 	listen 443 ssl http2;
-	server_name intintranetred.alamy.* intintranetred.alamyimages.*;
+	server_name intranet.alamy.* intranet.alamyimages.*;
+
+	ssl_certificate	cert/AlamyLABS_SAN.pem; # Internal, trusted SSL for all domains
+	ssl_certificate_key	cert/AlamyLABS_SAN.key;
+
+	include includes/ipsets/internal-networks; # Permit access from internal network IP ranges
+	include includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
+	deny all; # Deny by default
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
-	
+	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
+
 	# Rate limiting disabled for intranet sites
 #	limit_req zone=http_req_limit burst=50 nodelay; # Default rate limit defined in http config
 #	limit_req zone=http_req_limit_exceptions burst=50 nodelay; # Excempted rate limit defined in http config
-	set $downloadhandler_dev "downloadhandlertest.alamy.com";
+
+	status_zone intranet.alamy.international; # Shared memory zone for Nginx Plus dashboard to display stats for domains that match this Virtual Server config
+
 	subs_filter http:// https://; # Parses returned content to rewrite 'http://' as 'https://', by default only text/html files are changed
 
-	location /(downloads/en/video/|freedownloads)/ { # Download server rules
+	location ~* ^/(downloads/en/video|freedownloads)/ { # Download server rules video download request proxy to on-premise IIS server
 		proxy_pass http://download_servers;
+
 	}
-        location /downloads/ { # Sending download request to download handler in AWS
-                proxy_set_header Host $downloadhandler_dev;
-                proxy_pass http://$downloadhandler_dev;
-                include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
-        }
+
+	location ~* ^/downloads/ { # Download server rules
+		proxy_set_header Host $downloadhandler;
+		proxy_pass https://$downloadhandler;
+
+	}
 
 	location ~* ^/(category|categories|galleries)/(video-gallery[.]asp|galleries[.]asp|footage-gallery[.]asp|default[.]asp|blank[.]html) { # SearchWeb server exception rules
 		proxy_pass http://crm1_servers;
 	}
 
 	location ~* ^/(search[.]html|classify-image[.]html|stock-photo/|search/|galleries/|category/|categories/|photos-images/|fotos-imagenes/|fotos-imagens/|imagenes/|fotos-bilder/|archivio-fotografico/|fotos-immagini/) { # SearchWeb server rules
-		proxy_pass http://search_servers;
+		proxy_pass http://search_servers$upstream_type;
 	}
 
 	location / { # Default location
 		proxy_pass http://crm1_servers;
 	}
 
-	include /etc/nginx/conf.d/includes/error_page.conf; # Include error page location blocks
-	
+	include includes/error_page.conf; # Include error page location blocks
 }
