--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -4,7 +4,7 @@ server {
 	server_name $domain.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
 	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
@@ -61,23 +61,23 @@ server {
 	limit_req zone=http_req_limit_exceptions burst=1000 nodelay; # Excempted rate limit defined in http config
 
 	location ~* ^/(applicationvariableeditor[.]aspx|applicationvariableeditorforbot[.]aspx|applicationvariableeditor-arm[.]aspx|mediacomp/applicationvariableeditor[.]aspx|mediacomp/applicationvariableeditorforbot[.]aspx|mediacomp/applicationvariableeditor-arm[.]aspx|appviewer[.]aspx|artcomusers[.]xml|cache[.]asp|clientip[.]asp|clientip2[.]asp|set-trace[.]aspx|constringeditor[.]aspx|geoip[.]asp|refreshfraudwhitelist[.]asp|refresh-pricing[.]asp|serverheaders[.]asp|servervariable[.]asp|stopwords[.]xml|webconfigeditor[.]aspx|captcha/|deutsch/(stopwords[.]xml|downloadimage/refreshfraudwhiteList[.]aspx)|downloadimage/(test[.]aspx|refreshfraudwhitelist[.]aspx|geoiptest[.]aspx)|mediacomp/(generatecidoruserid[.]aspx|alamyrefwords[.]aspx)|myimages_v2[.]4/reports/rpt_ascategory[.]aspx|forcelogon[.]asp|mediacomp/StopWords[.]aspx|pressrelease/(login[.]aspx|admin/password[.]aspx)|purchase/creditcardpurchase[.]asmx/addccforcustomer) { # Block external access to specific files on Web servers
-		include includes/ipsets/internal-networks;
-		include includes/ipsets/alamy-offices;
+		include /etc/nginx/conf.d/includes/ipsets/internal-networks;
+		include /etc/nginx/conf.d/includes/ipsets/alamy-offices;
 		deny all;
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 
 		error_page 401 403 =301 $scheme://$host; # Redirect denied requests to homepage
 	}
 
 	location ~* ^/(search/(webconfigeditor[.]aspx|cdnconfiguration[.]aspx|appconfigreader[.]aspx|appconfigeditor[.]aspx|captcha/)) { # Block external access to specific files on SearchWeb servers
-		include includes/ipsets/internal-networks;
-		include includes/ipsets/alamy-offices;
+		include /etc/nginx/conf.d/includes/ipsets/internal-networks;
+		include /etc/nginx/conf.d/includes/ipsets/alamy-offices;
 		deny all;
 		proxy_pass http://search_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 
 		error_page 401 403 =301 $scheme://$host; # Redirect denied requests to homepage
 	}
@@ -100,19 +100,19 @@ server {
 		subs_filter_types text/xml; # Include text/xml for rewriting Sitemaps
 		subs_filter $blog_wpengine $host/blog; # Rewrite content from wpengine to this domain
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/contributor/help/stockimo[.](asp|aspx) { # Reverse proxy wpengine.com Contributor site exception
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/contributor/(help|contract|how-to-sell-footage/best-place-to-sell-stock-footage)/ { # To send request to IIS to avoid multiple redirects
 
 		proxy_pass http://web_servers;
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 	location ~* ^/contributor/de/(.*) { # Redirect contributor/de requests to https://stagingweb.alamy.de/contributor
 		return 301 https://$domain.alamy.de/contributor/$1$is_args$args;
@@ -127,7 +127,7 @@ server {
 		rewrite (?i)^/contributor/(.*) /$1 break; # (?i) is case-insensitive matche on rewrite regexp - Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 		subs_filter $contributor_wpengine $host/contributor; # Rewrite content from wpengine to this domain
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /sitemaps/sitemap_2.0/ { # Sitemaps 2 redirected to S3
@@ -137,7 +137,7 @@ server {
 
 		rewrite ^/sitemaps/sitemap_2.0/(.*) /sitemap_2_0/en/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /sitemaps/ { # Sitemaps redirected to S3
@@ -147,7 +147,7 @@ server {
 
 		rewrite ^/sitemaps/(.*) /en/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /contributorportfolio/images/ { # Reverse proxy Contributor Portfolio avatars stored in AWS S3
@@ -156,7 +156,7 @@ server {
 
 		rewrite ^/contributorportfolio/images/(.*) /images/contributor/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
@@ -165,7 +165,7 @@ server {
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
 		proxy_pass https://$c1;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
@@ -174,21 +174,21 @@ server {
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
 		proxy_pass https://$c7;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~ /downloads/?$ { # To redirect $domain.alamy.com/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
 
 		return 302 $scheme://$host/order-download-downloadhistory.asp;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location = /downloads/check.aspx { # To proxy Nginx test page to IIS
 
 		proxy_pass http://download_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(downloads/en/video|freedownloads)/ { # Download server rules video download request proxy to on-premise IIS server
@@ -205,7 +205,7 @@ server {
 	location ~* ^/(category|categories|galleries)/(video-gallery[.]asp|footage-gallery[.]asp|default[.]asp|blank[.]html) { # SearchWeb server exception rules
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(search[.]html|stock-photo/|search/|galleries/|free-stock-photo/|category/|categories/|fotos-bilder/|vsearch/|portfolio/) { # SearchWeb server rules
@@ -223,7 +223,7 @@ server {
 	location ~* ^/alamycontributorreports/ { # Contributor pages proxy to web_servers_bot cluster
 		proxy_pass http://web_servers_bot;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/contributorlinking/contributorportfolioservice.asmx(.*) { # increasing the upload size to 20m for contributor portfolio service
@@ -234,8 +234,8 @@ server {
 	location / { # Web server catch-all rule
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
-	include includes/error_page.conf; # Include error page location blocks
+	include /etc/nginx/conf.d/includes/error_page.conf; # Include error page location blocks
 }
