--- a/enabled-sites/alamy.de.conf
+++ b/enabled-sites/alamy.de.conf
@@ -4,7 +4,7 @@ server {
 	server_name $domain.alamy.de;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
 	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
@@ -58,7 +58,7 @@ server {
 	server_name $domain.alamy.de;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
 	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
@@ -73,25 +73,25 @@ server {
 	}
 
 	location ~* ^/(applicationvariableeditor[.]aspx|applicationvariableeditorforbot[.]aspx|applicationvariableeditor-arm[.]aspx|mediacomp/applicationvariableeditor[.]aspx|mediacomp/applicationvariableeditorforbot[.]aspx|mediacomp/applicationvariableeditor-arm[.]aspx|appviewer[.]aspx|artcomusers[.]xml|cache[.]asp|clientip[.]asp|clientip2[.]asp|set-trace[.]aspx|constringeditor[.]aspx|geoip[.]asp|refreshfraudwhitelist[.]asp|refresh-pricing[.]asp|serverheaders[.]asp|servervariable[.]asp|stopwords[.]xml|webconfigeditor[.]aspx|captcha/|deutsch/(stopwords[.]xml|downloadimage/refreshfraudwhiteList[.]aspx)|downloadimage/(test[.]aspx|refreshfraudwhitelist[.]aspx|geoiptest[.]aspx)|mediacomp/(generatecidoruserid[.]aspx|alamyrefwords[.]aspx)|myimages_v2[.]4/reports/rpt_ascategory[.]aspx|forcelogon[.]asp|mediacomp/StopWords[.]aspx|pressrelease/(login[.]aspx|admin/password[.]aspx)|purchase/creditcardpurchase[.]asmx/addccforcustomer) { # Block external access to specific files on Web servers
-		include includes/ipsets/internal-networks;
-		include includes/ipsets/alamy-offices;
+		include /etc/nginx/conf.d/includes/ipsets/internal-networks;
+		include /etc/nginx/conf.d/includes/ipsets/alamy-offices;
 		deny all;
 		proxy_pass http://web_servers;
 
 		error_page 401 403 =301 $scheme://$host; # Redirect denied requests to homepage
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(search/(webconfigeditor[.]aspx|cdnconfiguration[.]aspx|appconfigreader[.]aspx|appconfigeditor[.]aspx|captcha/)) { # Block external access to specific files on SearchWeb servers
-		include includes/ipsets/internal-networks;
-		include includes/ipsets/alamy-offices;
+		include /etc/nginx/conf.d/includes/ipsets/internal-networks;
+		include /etc/nginx/conf.d/includes/ipsets/alamy-offices;
 		deny all;
 		proxy_pass http://search_servers;
 
 		error_page 401 403 =301 $scheme://$host; # Redirect denied requests to homepage
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /sitemaps/sitemap_2.0/ { # Sitemaps 2 redirected to S3
@@ -101,7 +101,7 @@ server {
 
 		rewrite ^/sitemaps/sitemap_2.0/(.*) /sitemap_2_0/de/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /sitemaps/ { # Sitemaps redirected to S3
@@ -111,7 +111,7 @@ server {
 
 		rewrite ^/sitemaps/(.*) /de/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /contributorportfolio/images/ {# Reverse proxy Contributor Portfolio avatars stored in AWS S3
@@ -120,7 +120,7 @@ server {
 
 		rewrite ^/contributorportfolio/images/(.*) /images/contributor/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(blog|contributor)/xmlrpc.php$ { # Forbid requests to WordPress XML-RPC
@@ -148,7 +148,7 @@ server {
 			rewrite (?i)^/contributor/(.*) /$1 break;
 		}
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
@@ -157,7 +157,7 @@ server {
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
 		proxy_pass https://$c1;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
@@ -166,14 +166,14 @@ server {
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
 		proxy_pass https://$c7;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~ /downloads/?$ { # To redirect $domain.alamy.de/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
 
 		return 302 $scheme://$host/order-download-downloadhistory.asp;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(downloads/en/video|freedownloads)/ { # Download server rules video download request proxy to on-premise IIS server
@@ -190,7 +190,7 @@ server {
 	location ~* ^/(category|categories|galleries)/(video-gallery[.]asp|footage-gallery[.]asp|default[.]asp|blank[.]html) { # SearchWeb server exception rules
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/stock-photo/(.*) { # Redirect requests for /stock-photo to equivalent /fotos-bilder at Nginx level
@@ -209,7 +209,7 @@ server {
 	location ~* ^/alamycontributorreports/ { # Contributor pages proxy to web_servers_bot cluster
 		proxy_pass http://web_servers_bot;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/contributorlinking/contributorportfolioservice.asmx(.*) { # increasing the upload size to 20m for contributor portfolio service
@@ -220,8 +220,8 @@ server {
 	location / { # Web server catch-all rule
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
-	include includes/error_page.conf; # Include error page location blocks
+	include /etc/nginx/conf.d/includes/error_page.conf; # Include error page location blocks
 }
