--- a/enabled-sites/alamy.int.conf
+++ b/enabled-sites/alamy.int.conf
@@ -4,7 +4,7 @@ server { # Redirect http requests to https
 	server_name $domain.alamy.es $domain.alamy.it $domain.alamy.uk $domain.alamyimages.fr;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d//etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
 	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
@@ -26,7 +26,7 @@ server {
 	server_name ~^($domain)[.](alamy|alamyimages)[.](?<tld>es|fr|it|uk)$; # All International requests will use this config, <tld> named regex group used to extract to a variable the domain requested
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d//etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
 	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
@@ -41,25 +41,25 @@ server {
 	}
 
 	location ~* ^/(applicationvariableeditor[.]aspx|applicationvariableeditorforbot[.]aspx|applicationvariableeditor-arm[.]aspx|mediacomp/applicationvariableeditor[.]aspx|mediacomp/applicationvariableeditorforbot[.]aspx|mediacomp/applicationvariableeditor-arm[.]aspx|appviewer[.]aspx|artcomusers[.]xml|cache[.]asp|clientip[.]asp|clientip2[.]asp|set-trace[.]aspx|constringeditor[.]aspx|geoip[.]asp|refreshfraudwhitelist[.]asp|refresh-pricing[.]asp|serverheaders[.]asp|servervariable[.]asp|stopwords[.]xml|webconfigeditor[.]aspx|captcha/|deutsch/(stopwords[.]xml|downloadimage/refreshfraudwhiteList[.]aspx)|downloadimage/(test[.]aspx|refreshfraudwhitelist[.]aspx|geoiptest[.]aspx)|mediacomp/(generatecidoruserid[.]aspx|alamyrefwords[.]aspx)|myimages_v2[.]4/reports/rpt_ascategory[.]aspx|forcelogon[.]asp|mediacomp/StopWords[.]aspx|pressrelease/(login[.]aspx|admin/password[.]aspx)|purchase/creditcardpurchase[.]asmx/addccforcustomer) { # Block external access to specific files on Web servers
-		include includes/ipsets/internal-networks;
-		include includes/ipsets/alamy-offices;
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/ipsets/internal-networks;
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/ipsets/alamy-offices;
 		deny all;
 		proxy_pass http://web_servers;
 
 		error_page 401 403 =301 $scheme://$host; # Redirect denied requests to homepage
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(search/(webconfigeditor[.]aspx|cdnconfiguration[.]aspx|appconfigreader[.]aspx|appconfigeditor[.]aspx|captcha/)) { # Block external access to specific files on SearchWeb servers
-		include includes/ipsets/internal-networks;
-		include includes/ipsets/alamy-offices;
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/ipsets/internal-networks;
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/ipsets/alamy-offices;
 		deny all;
 		proxy_pass http://search_servers;
 
 		error_page 401 403 =301 $scheme://$host; # Redirect denied requests to homepage
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /sitemaps/sitemap_2.0/ { # Sitemaps2 redirected to S3
@@ -69,7 +69,7 @@ server {
 
 		rewrite ^/sitemaps/sitemap_2.0/(.*) /sitemap_2_0/$tld/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location /sitemaps/ { # Sitemaps redirected to S3
@@ -80,7 +80,7 @@ server {
 		# $tld extracted from requested host is used to build forwarded S3 request for sitemap
 		rewrite ^/sitemaps/(.*) /$tld/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(downloads/en/video|freedownloads)/ { # Download server rules video download request proxy to on-premise IIS server
@@ -97,7 +97,7 @@ server {
 	location ~* ^/(category|categories|galleries)/(video-gallery[.]asp|galleries[.]asp|footage-gallery[.]asp|default[.]asp|blank[.]html) { # SearchWeb server exception rules
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(search[.]html|stock-photo/|search/|galleries/|category/|categories/|photos-images/|fotos-imagenes/|fotos-imagens/|imagenes/|fotos-bilder/|archivio-fotografico/|fotos-immagini/) { # SearchWeb server rules
@@ -111,8 +111,8 @@ server {
 	location / { # Default location
 		proxy_pass http://web_servers;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d//etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
-	include includes/error_page.conf; # Include error page location blocks
+	include /etc/nginx/conf.d//etc/nginx/conf.d/includes/error_page.conf; # Include error page location blocks
 }
