--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -215,7 +215,7 @@ server {
 	}
 
 	location ~* ^/alamycontributorreports/ { # Contributor pages proxy to web_servers_bot cluster
-		proxy_pass http://web_servers_bot;
+		proxy_pass http://web_servers;
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
