--- a/includes/dns-maps.conf
+++ b/includes/dns-maps.conf
@@ -16,11 +16,11 @@ map $host $contributor_wpengine {
 	default 'acontribhelp.wpengine.com';
 }
 
-map $host $c7 {
+map $host $testc7 {
 	default 'testc7.alamy.com';
 }
 
-map $host $c1 {
+map $host $testc1 {
 	default 'testc1.alamy.com';
 }
 
