--- a/enabled-sites/alamy.de.conf
+++ b/enabled-sites/alamy.de.conf
@@ -13,16 +13,16 @@ server {
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $c1; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://$c1;
+		proxy_pass https://$testc1;
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $c7; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc7; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://$c7;
+		proxy_pass https://$testc7;
 	}
 
 	location ~* ^/mediacomp/imagedetails.aspx/getsimilars { # Exception to pass http GetSimilars requests
@@ -143,18 +143,18 @@ server {
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $c1; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://$c1;
+		proxy_pass https://$testc1;
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $c7; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc7; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://$c7;
+		proxy_pass https://$testc7;
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
