--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -85,14 +85,14 @@ server {
 		proxy_cache_valid 10m; # Response status codes of 200, 301 and 302 are cached in Nginx for 10 minutes before revalidating
 		proxy_hide_header Cache-Control; # Hide backend Cache-Control header from client
 		proxy_hide_header Link; # Hide WordPress API link header from client
-		proxy_set_header Host $blog_wpengine; # Valid Host header for wpengine requests
+		proxy_set_header Host ablog.wpengine.com; # Valid Host header for wpengine requests
 		proxy_set_header Accept-Encoding ""; # subs_filter cannot function on gzipped content - this header forces uncompressed response
-		proxy_pass $scheme://$blog_wpengine;
-		proxy_redirect $scheme://$blog_wpengine/ $scheme://$host/blog/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
+		proxy_pass $scheme://ablog.wpengine.com;
+		proxy_redirect $scheme://ablog.wpengine.com/ $scheme://$host/blog/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
 
 		rewrite (?i)^/blog/(.*) /$1 break; # (?i) is case-insensitive matche on rewrite regexp - Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 		subs_filter_types text/xml; # Include text/xml for rewriting Sitemaps
-		subs_filter $blog_wpengine $host/blog; # Rewrite content from wpengine to this domain
+		subs_filter ablog.wpengine.com $host/blog; # Rewrite content from wpengine to this domain
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
