--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -113,13 +113,13 @@ server {
 	}
 	location ~* ^/contributor/ { # Reverse proxy wpengine.com Contributor site
 		proxy_hide_header Link; # Hide WordPress API link header from client
-		proxy_set_header Host $contributor_wpengine; # Valid Host header for wpengine requests
+		proxy_set_header Host acontribhelp.wpengine.com; # Valid Host header for wpengine requests
 		proxy_set_header Accept-Encoding ""; # subs_filter cannot function on gzipped content - this header forces uncompressed response
-		proxy_pass $scheme://$contributor_wpengine;
-		proxy_redirect $scheme://$contributor_wpengine/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
+		proxy_pass $scheme://acontribhelp.wpengine.com;
+		proxy_redirect $scheme://acontribhelp.wpengine.com/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
 
 		rewrite (?i)^/contributor/(.*) /$1 break; # (?i) is case-insensitive matche on rewrite regexp - Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
-		subs_filter $contributor_wpengine $host/contributor; # Rewrite content from wpengine to this domain
+		subs_filter acontribhelp.wpengine.com $host/contributor; # Rewrite content from wpengine to this domain
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
