--- a/enabled-sites/alamy.de.conf
+++ b/enabled-sites/alamy.de.conf
@@ -123,17 +123,17 @@ server {
 
 	location ~* ^/contributor/ { # Reverse proxy wpengine.com to German Contributor site
 		proxy_hide_header Link; # Hide WordPress API link header from client
-		proxy_set_header Host $contributor_wpengine; # Valid Host header for wpengine requests
+		proxy_set_header Host acontribhelp.wpengine.com; # Valid Host header for wpengine requests
 		proxy_set_header Accept-Encoding ""; # subs_filter cannot function on gzipped content - this header forces uncompressed response
-		proxy_pass $scheme://$contributor_wpengine;
-		proxy_redirect $scheme://$contributor_wpengine/de/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
+		proxy_pass $scheme://acontribhelp.wpengine.com;
+		proxy_redirect $scheme://acontribhelp.wpengine.com/de/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
 
 		rewrite (?i)^/contributor/(.*) /de/$1 break; # German CHP is stored in /de/ subfolder in wpengine.com - (?i) is case-insensitive matche on rewrite regexp - Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
-		subs_filter $contributor_wpengine/de/ $host/contributor/; # Rewrite content from wpengine to this domain
-		subs_filter $contributor_wpengine/wp-content/ $host/contributor/wp-content/; # Rewrite auxiliary files to root of wpengine site - i.e. don't use /de/ folder
+		subs_filter acontribhelp.wpengine.com/de/ $host/contributor/; # Rewrite content from wpengine to this domain
+		subs_filter acontribhelp.wpengine.com/wp-content/ $host/contributor/wp-content/; # Rewrite auxiliary files to root of wpengine site - i.e. don't use /de/ folder
 
 		location ~* ^/contributor/wp-content/ { # Content stored in /wp-content/ are not in /de/ subfolder at wpengine.com so require different rewrite
-			proxy_pass $scheme://$contributor_wpengine; # proxy_pass not inherited from outer location block
+			proxy_pass $scheme://acontribhelp.wpengine.com; # proxy_pass not inherited from outer location block
 
 			rewrite (?i)^/contributor/(.*) /$1 break;
 		}
