--- a/enabled-sites/alamy.int.conf
+++ b/enabled-sites/alamy.int.conf
@@ -55,8 +55,8 @@ server {
 
 	location /sitemaps/sitemap_2.0/ { # Sitemaps2 redirected to S3
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $sitemaps_s3;
-		proxy_pass https://$sitemaps_s3;
+		proxy_set_header Host alamy-sitemaps.s3-eu-west-1.amazonaws.com;
+		proxy_pass https://alamy-sitemaps.s3-eu-west-1.amazonaws.com;
 
 		rewrite ^/sitemaps/sitemap_2.0/(.*) /sitemap_2_0/$tld/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
@@ -65,8 +65,8 @@ server {
 
 	location /sitemaps/ { # Sitemaps redirected to S3
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $sitemaps_s3;
-		proxy_pass https://$sitemaps_s3;
+		proxy_set_header Host alamy-sitemaps.s3-eu-west-1.amazonaws.com;
+		proxy_pass https://alamy-sitemaps.s3-eu-west-1.amazonaws.com;
 
 		# $tld extracted from requested host is used to build forwarded S3 request for sitemap
 		rewrite ^/sitemaps/(.*) /$tld/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
