--- a/enabled-sites/alamy.de.conf
+++ b/enabled-sites/alamy.de.conf
@@ -86,8 +86,8 @@ server {
 
 	location /sitemaps/sitemap_2.0/ { # Sitemaps 2 redirected to S3
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $sitemaps_s3;
-		proxy_pass https://$sitemaps_s3;
+		proxy_set_header Host alamy-sitemaps.s3-eu-west-1.amazonaws.com;
+		proxy_pass https://alamy-sitemaps.s3-eu-west-1.amazonaws.com;
 
 		rewrite ^/sitemaps/sitemap_2.0/(.*) /sitemap_2_0/de/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
@@ -96,8 +96,8 @@ server {
 
 	location /sitemaps/ { # Sitemaps redirected to S3
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $sitemaps_s3;
-		proxy_pass https://$sitemaps_s3;
+		proxy_set_header Host alamy-sitemaps.s3-eu-west-1.amazonaws.com;
+		proxy_pass https://alamy-sitemaps.s3-eu-west-1.amazonaws.com;
 
 		rewrite ^/sitemaps/(.*) /de/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
@@ -105,8 +105,8 @@ server {
 	}
 
 	location /contributorportfolio/images/ {# Reverse proxy Contributor Portfolio avatars stored in AWS S3
-		proxy_set_header Host $eu_west_1_s3;
-		proxy_pass https://$eu_west_1_s3;
+		proxy_set_header Host alamy-eu-west-1.s3.eu-west-1.amazonaws.com;
+		proxy_pass https://alamy-eu-west-1.s3.eu-west-1.amazonaws.com;
 
 		rewrite ^/contributorportfolio/images/(.*) /images/contributor/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
