--- a/enabled-sites/alamy.int.conf
+++ b/enabled-sites/alamy.int.conf
@@ -80,8 +80,8 @@ server {
 	}
 
 	location ~* ^/downloads/ { # Download server rules
-		proxy_set_header Host $downloadhandler;
-		proxy_pass https://$downloadhandler;
+		proxy_set_header Host downloadhandlerdev.alamy.com;
+		proxy_pass https://downloadhandlerdev.alamy.com;
 
 	}
 
