--- a/includes/dns-maps.conf
+++ b/includes/dns-maps.conf
@@ -9,11 +9,11 @@ map $host $eu_west_1_s3 {
 }
 
 map $host $blog_wpengine {
-	default 'ablog.wpengine.com';
+	default 'ablogstg.wpengine.com';
 }
 
 map $host $contributor_wpengine {
-	default 'acontribhelp.wpengine.com';
+	default 'acontribhelpstg.wpengine.com';
 }
 
 map $host $testc7 {
