--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -13,16 +13,16 @@ server {
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc1.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc1.alamy.com;
+		proxy_pass https://$testc1;
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc7.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc7; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc7.alamy.com;
+		proxy_pass https://$testc7;
 	}
 
 	location ~* ^/contributor/de/(.*) { # Redirect contributor/de requests to https://$domain.alamy.de/contributor
@@ -85,14 +85,14 @@ server {
 		proxy_cache_valid 10m; # Response status codes of 200, 301 and 302 are cached in Nginx for 10 minutes before revalidating
 		proxy_hide_header Cache-Control; # Hide backend Cache-Control header from client
 		proxy_hide_header Link; # Hide WordPress API link header from client
-		proxy_set_header Host ablog.wpengine.com; # Valid Host header for wpengine requests
+		proxy_set_header Host $blog_wpengine; # Valid Host header for wpengine requests
 		proxy_set_header Accept-Encoding ""; # subs_filter cannot function on gzipped content - this header forces uncompressed response
-		proxy_pass $scheme://ablog.wpengine.com;
-		proxy_redirect $scheme://ablog.wpengine.com/ $scheme://$host/blog/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
+		proxy_pass $scheme://$blog_wpengine;
+		proxy_redirect $scheme://$blog_wpengine/ $scheme://$host/blog/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
 
 		rewrite (?i)^/blog/(.*) /$1 break; # (?i) is case-insensitive matche on rewrite regexp - Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 		subs_filter_types text/xml; # Include text/xml for rewriting Sitemaps
-		subs_filter ablog.wpengine.com $host/blog; # Rewrite content from wpengine to this domain
+		subs_filter $blog_wpengine $host/blog; # Rewrite content from wpengine to this domain
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
@@ -113,13 +113,13 @@ server {
 	}
 	location ~* ^/contributor/ { # Reverse proxy wpengine.com Contributor site
 		proxy_hide_header Link; # Hide WordPress API link header from client
-		proxy_set_header Host acontribhelp.wpengine.com; # Valid Host header for wpengine requests
+		proxy_set_header Host $contributor_wpengine; # Valid Host header for wpengine requests
 		proxy_set_header Accept-Encoding ""; # subs_filter cannot function on gzipped content - this header forces uncompressed response
-		proxy_pass $scheme://acontribhelp.wpengine.com;
-		proxy_redirect $scheme://acontribhelp.wpengine.com/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
+		proxy_pass $scheme://$contributor_wpengine;
+		proxy_redirect $scheme://$contributor_wpengine/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
 
 		rewrite (?i)^/contributor/(.*) /$1 break; # (?i) is case-insensitive matche on rewrite regexp - Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
-		subs_filter acontribhelp.wpengine.com $host/contributor; # Rewrite content from wpengine to this domain
+		subs_filter $contributor_wpengine $host/contributor; # Rewrite content from wpengine to this domain
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
@@ -155,18 +155,18 @@ server {
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc1.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc1.alamy.com;
+		proxy_pass https://$testc1;
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc7.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc7; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc7.alamy.com;
+		proxy_pass https://$testc7;
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
@@ -191,8 +191,8 @@ server {
 	}
 
 	location ~* ^/downloads/ { # Download server rules
-		proxy_set_header Host downloadhandlerdev.alamy.com;
-		proxy_pass https://downloadhandlerdev.alamy.com;
+		proxy_set_header Host $downloadhandler;
+		proxy_pass https://$downloadhandler;
 
 	}
 
