--- a/enabled-sites/alamy.de.conf
+++ b/enabled-sites/alamy.de.conf
@@ -13,16 +13,16 @@ server {
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc1.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc1.alamy.com;
+		proxy_pass https://$testc1;
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc7.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc7; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc7.alamy.com;
+		proxy_pass https://$testc7;
 	}
 
 	location ~* ^/mediacomp/imagedetails.aspx/getsimilars { # Exception to pass http GetSimilars requests
@@ -123,17 +123,17 @@ server {
 
 	location ~* ^/contributor/ { # Reverse proxy wpengine.com to German Contributor site
 		proxy_hide_header Link; # Hide WordPress API link header from client
-		proxy_set_header Host acontribhelp.wpengine.com; # Valid Host header for wpengine requests
+		proxy_set_header Host $contributor_wpengine; # Valid Host header for wpengine requests
 		proxy_set_header Accept-Encoding ""; # subs_filter cannot function on gzipped content - this header forces uncompressed response
-		proxy_pass $scheme://acontribhelp.wpengine.com;
-		proxy_redirect $scheme://acontribhelp.wpengine.com/de/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
+		proxy_pass $scheme://$contributor_wpengine;
+		proxy_redirect $scheme://$contributor_wpengine/de/ $scheme://$host/contributor/; # Changes the location header, e.g. in a 301 redirect, of a response from wpengine to be relative to the original host and location, so redirects don't leave the site
 
 		rewrite (?i)^/contributor/(.*) /de/$1 break; # German CHP is stored in /de/ subfolder in wpengine.com - (?i) is case-insensitive matche on rewrite regexp - Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
-		subs_filter acontribhelp.wpengine.com/de/ $host/contributor/; # Rewrite content from wpengine to this domain
-		subs_filter acontribhelp.wpengine.com/wp-content/ $host/contributor/wp-content/; # Rewrite auxiliary files to root of wpengine site - i.e. don't use /de/ folder
+		subs_filter $contributor_wpengine/de/ $host/contributor/; # Rewrite content from wpengine to this domain
+		subs_filter $contributor_wpengine/wp-content/ $host/contributor/wp-content/; # Rewrite auxiliary files to root of wpengine site - i.e. don't use /de/ folder
 
 		location ~* ^/contributor/wp-content/ { # Content stored in /wp-content/ are not in /de/ subfolder at wpengine.com so require different rewrite
-			proxy_pass $scheme://acontribhelp.wpengine.com; # proxy_pass not inherited from outer location block
+			proxy_pass $scheme://$contributor_wpengine; # proxy_pass not inherited from outer location block
 
 			rewrite (?i)^/contributor/(.*) /$1 break;
 		}
@@ -143,18 +143,18 @@ server {
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc1.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc1.alamy.com;
+		proxy_pass https://$testc1;
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(thumbs|zooms)/ { # Thumbs and Zooms rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host testc7.alamy.com; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc7; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://testc7.alamy.com;
+		proxy_pass https://$testc7;
 
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
@@ -172,8 +172,8 @@ server {
 	}
 
 	location ~* ^/downloads/ { # Download server rules
-		proxy_set_header Host downloadhandlerdev.alamy.com;
-		proxy_pass https://downloadhandlerdev.alamy.com;
+		proxy_set_header Host $downloadhandler;
+		proxy_pass https://$downloadhandler;
 
 	}
 
