--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ events {
 http {
 
 	include /etc/nginx/conf.d/enabled-sites/*.conf;  # Includes site configs for each domain
-        include /etc/nginx/conf.d/includes/upstreams.conf;
+    include /etc/nginx/conf.d/includes/upstreams.conf;
 
 	# Server SSL config adapted from Mozilla intermediate profile (https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29)
 	ssl_session_timeout 60m;
@@ -41,7 +41,7 @@ http {
 	proxy_buffers 4 256k; # Increased buffer sizes to allow long request URIs
 	proxy_buffer_size 128k;
 	proxy_busy_buffers_size 256k;
-        proxy_ignore_client_abort on;
+    proxy_ignore_client_abort on;
 	
 	# Server header config
 	# Map scheme of connection to variable used to set Host header in similar fashion to TMG (https includes server port, http does not)
@@ -58,7 +58,13 @@ http {
 	limit_req_zone $limit_key zone=http_req_limit:10m rate=600r/m; # Default rate limit for 600 requests/minute (equivalent with TMG flood mitigation) - using 10MB of RAM - enough for 81,920 IP addresses
 	limit_req_zone $binary_remote_addr zone=http_req_limit_exceptions:1m rate=16000r/m; # Rate limit for IPs allowed greater rate limit
 	client_max_body_size 20m;
-
+	
+	# Global hostname variables
+	include /etc/nginx/conf.d/includes/dns-maps.conf; # Default Nginx behaviour, DNS is only resolved on startup. Setting hostnames as variables so DNS is re-resolved according to TTLs
+	
+	include /etc/nginx/conf.d/includes/useragent-upstream.conf; # Route traffic to backend cluster based on user-agent
+	include /etc/nginx/conf.d/includes/useragent-block.conf; # Blackhole requests from specific user-agent
+	
 	# Server compression config
 	gzip on; # Enable compression of proxied content by Nginx
 	gzip_disable "msie6"; # Don't compress for early version of IE
