--- a/enabled-sites/alamy.int.conf
+++ b/enabled-sites/alamy.int.conf
@@ -1,7 +1,7 @@
 server { # Redirect http requests to https
 
 	listen 80;
-	server_name $domain.alamy.es $domain.alamy.it $domain.alamy.uk $domain.alamyimages.fr;
+	server_name $cdcidomain.alamy.es $cdcidomain.alamy.it $cdcidomain.alamy.uk $cdcidomain.alamyimages.fr;
 
 	# Allow by default, block access from blacklisted IPs
 	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -19,7 +19,7 @@ server { # Redirect http requests to https
 server {
 
 	listen 443 ssl http2;
-	server_name ~^($domain)[.](alamy|alamyimages)[.](?<tld>es|fr|it|uk)$; # All International requests will use this config, <tld> named regex group used to extract to a variable the domain requested
+	server_name ~^($cdcidomain)[.](alamy|alamyimages)[.](?<tld>es|fr|it|uk)$; # All International requests will use this config, <tld> named regex group used to extract to a variable the domain requested
 
 	# Allow by default, block access from blacklisted IPs
 	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
