--- a/enabled-sites/alamy.com.conf
+++ b/enabled-sites/alamy.com.conf
@@ -1,7 +1,7 @@
 server {
 
 	listen 80;
-	server_name $domain.alamy.com;
+	server_name $cdcidomain.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
 	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -25,8 +25,8 @@ server {
 		proxy_pass https://$testc7;
 	}
 
-	location ~* ^/contributor/de/(.*) { # Redirect contributor/de requests to https://$domain.alamy.de/contributor
-		return 301 https://$domain.alamy.de/contributor/$1$is_args$args;
+	location ~* ^/contributor/de/(.*) { # Redirect contributor/de requests to https://$cdcidomain.alamy.de/contributor
+		return 301 https://$cdcidomain.alamy.de/contributor/$1$is_args$args;
 	}
 
 	location ~* ^/mediacomp/imagedetails.aspx/getsimilars { # Exception to pass http GetSimilars requests
@@ -46,7 +46,7 @@ server {
 server {
 
 	listen 443 ssl http2;
-	server_name $domain.alamy.com; # Internal hostnames included for internal alerting/testing only
+	server_name $cdcidomain.alamy.com; # Internal hostnames included for internal alerting/testing only
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
 
 	proxy_read_timeout 300s; # Increased timeout when waiting for response from backend server = 5 mins
@@ -109,7 +109,7 @@ server {
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 	location ~* ^/contributor/de/(.*) { # Redirect contributor/de requests to https://stagingweb.alamy.de/contributor
-		return 301 https://$domain.alamy.de/contributor/$1$is_args$args;
+		return 301 https://$cdcidomain.alamy.de/contributor/$1$is_args$args;
 	}
 	location ~* ^/contributor/ { # Reverse proxy wpengine.com Contributor site
 		proxy_hide_header Link; # Hide WordPress API link header from client
@@ -171,7 +171,7 @@ server {
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
-	location ~ /downloads/?$ { # To redirect $domain.alamy.com/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
+	location ~ /downloads/?$ { # To redirect $cdcidomain.alamy.com/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
 
 		return 302 $scheme://$host/order-download-downloadhistory.asp;
 
