--- a/enabled-sites/alamy.de.conf
+++ b/enabled-sites/alamy.de.conf
@@ -1,7 +1,7 @@
 server {
 
 	listen 80;
-	server_name $domain.alamy.de;
+	server_name $cdcidomain.alamy.de;
 
 	# Allow by default, block access from blacklisted IPs
 	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -38,7 +38,7 @@ server {
 	}
 
 	location ~* ^/stock-photo/(.*) { # Redirect requests for /stock-photo to equivalent https /fotos-bilder at Nginx level so there aren't multiple redirects
-		return 301 https://$domain.alamy.de/fotos-bilder/$1$is_args$args;
+		return 301 https://$cdcidomain.alamy.de/fotos-bilder/$1$is_args$args;
 	}
 
 	location / { # Redirect http requests to https
@@ -50,7 +50,7 @@ server {
 server {
 
 	listen 443 ssl http2;
-	server_name $domain.alamy.de;
+	server_name $cdcidomain.alamy.de;
 
 	# Allow by default, block access from blacklisted IPs
 	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -159,7 +159,7 @@ server {
 		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
-	location ~ /downloads/?$ { # To redirect $domain.alamy.de/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
+	location ~ /downloads/?$ { # To redirect $cdcidomain.alamy.de/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
 
 		return 302 $scheme://$host/order-download-downloadhistory.asp;
 
@@ -184,7 +184,7 @@ server {
 	}
 
 	location ~* ^/stock-photo/(.*) { # Redirect requests for /stock-photo to equivalent /fotos-bilder at Nginx level
-		return 301 https://$domain.alamy.de/fotos-bilder/$1$is_args$args;
+		return 301 https://$cdcidomain.alamy.de/fotos-bilder/$1$is_args$args;
 	}
 
 	location ~* ^/(search[.]html|search/|galleries/|free-stock-photo/|category/|categories/|fotos-bilder/|vsearch/|portfolio/) { # SearchWeb server rules
