--- a/enabled-sites/redirects.conf
+++ b/enabled-sites/redirects.conf
@@ -1,4 +1,4 @@
-server { # Redirect all requests to domain zone apex to $domain.alamy.*
+server { # Redirect all requests to domain zone apex to $cdcidomain.alamy.*
 
 	listen 80;
 	listen 443 ssl http2;
@@ -15,7 +15,7 @@ server { # Redirect old de site to new
 
 	listen 80;
 	listen 443 ssl http2;
-	server_name $domainde.alamy.com;
+	server_name $cdcidomainde.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
 	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -25,15 +25,15 @@ server { # Redirect old de site to new
 	}
 
 	location ~* ^/category/(.*) { # Redirect requests for /category to web config at Nginx level so there aren't multiple redirects
-		return 301 https://$domain.alamy.de/category/$1$is_args$args;
+		return 301 https://$cdcidomain.alamy.de/category/$1$is_args$args;
 	}
 
 	location ~* ^/stock-photo/(.*) { # Redirect requests for /stock-photo to equivalent /fotos-bilder at Nginx level so there aren't multiple redirects
-		return 301 https://$domain.alamy.de/fotos-bilder/$1$is_args$args;
+		return 301 https://$cdcidomain.alamy.de/fotos-bilder/$1$is_args$args;
 	}
 
 	location / { # Redirect all other requests to stagingweb.alamy.de
-		return 301 https://$domain.alamy.de$request_uri;
+		return 301 https://$cdcidomain.alamy.de$request_uri;
 	}
 
 }
@@ -41,19 +41,19 @@ server { # Redirect old de site to new
 server { # Redirect http requests to secure to https
 
 	listen 80;
-	server_name $domainsecure.alamy.com;
+	server_name $cdcidomainsecure.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
 	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
-	return 301 https://$domainsecure.alamy.com$request_uri;
+	return 301 https://$cdcidomainsecure.alamy.com$request_uri;
 
 }
 
 server { # Used for forum login API calls
 
 	listen 443 ssl http2;
-	server_name $domainsecure.alamy.com;
+	server_name $cdcidomainsecure.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
 	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -63,7 +63,7 @@ server { # Used for forum login API calls
 	}
 
 	location / {
-		return 301 https://$domain.alamy.com$request_uri;
+		return 301 https://$cdcidomain.alamy.com$request_uri;
 	}
 
 }
@@ -71,7 +71,7 @@ server { # Used for forum login API calls
 server { # Redirect http requests to https
 
 	listen 80;
-	server_name $domain.alamy.pt;
+	server_name $cdcidomain.alamy.pt;
 
 	# Allow by default, block access from blacklisted IPs
 	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
@@ -80,10 +80,10 @@ server { # Redirect http requests to https
 
 }
 
-server { # Redirect $domain.alamy.pt sites to $domain.alamy.com
+server { # Redirect $cdcidomain.alamy.pt sites to $cdcidomain.alamy.com
 
 	listen 443 ssl http2;
-	server_name $domain.alamy.pt;
+	server_name $cdcidomain.alamy.pt;
 
 	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
@@ -100,11 +100,11 @@ server { # Redirect $domain.alamy.pt sites to $domain.alamy.com
 	}
 
 	location ~* ^/fotos-imagens/(.*) { # Redirect requests for /fotos-imagens to equivalent /stock-photo at Nginx level
-		return 301 https://$domain.alamy.com/stock-photo/$1$is_args$args;
+		return 301 https://$cdcidomain.alamy.com/stock-photo/$1$is_args$args;
 	}
 
-	location / { # Redirect all other requests to $domain.alamy.com
-		return 301 https://$domain.alamy.com$request_uri;
+	location / { # Redirect all other requests to $cdcidomain.alamy.com
+		return 301 https://$cdcidomain.alamy.com$request_uri;
 	}
 }
 
