--- a/enabled-sites/download.alamy.conf
+++ b/enabled-sites/download.alamy.conf
@@ -24,9 +24,9 @@ server { # $cdcidownload.alamy.* directly connects to web_servers:8080 via TC Ng
 
 	location ~* ^/thumbs/4/ { # Search thumbs rule
 		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $c1; # Set valid Host header for connection to AWS thumbs server
+		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
 		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://$c1;
+		proxy_pass https://$testc1;
 	}
 
 	location ~* ^/thumbs/ { # Thumbs rule
