--- a/enabled-sites/intranet.alamy.com.conf
+++ b/enabled-sites/intranet.alamy.com.conf
@@ -3,8 +3,8 @@ server { # Redirect http requests to https
 	listen 80;
 	server_name intranet.alamy.com intranet.alamy.de;
 
-	include includes/ipsets/internal-networks; # Permit access from internal network IP ranges
-	include includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
+	include /etc/nginx/conf.d/includes/ipsets/internal-networks; # Permit access from internal network IP ranges
+	include /etc/nginx/conf.d/includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
 	deny all; # Deny by default
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
@@ -27,11 +27,11 @@ server {
 	listen 443 ssl http2;
 	server_name intranet.alamy.com intranet.alamy.de;
 
-	ssl_certificate	cert/AlamyLABS_SAN.pem; # Internal, trusted SSL for all domains
-	ssl_certificate_key	cert/AlamyLABS_SAN.key;
+	ssl_certificate	/etc/nginx/conf.d/Cert/AlamyLABS_SAN.pem; # Internal, trusted SSL for all domains
+	ssl_certificate_key	/etc/nginx/conf.d/Cert/AlamyLABS_SAN.key;
 
-	include includes/ipsets/internal-networks; # Permit access from internal network IP ranges
-	include includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
+	include /etc/nginx/conf.d/includes/ipsets/internal-networks; # Permit access from internal network IP ranges
+	include /etc/nginx/conf.d/includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
 	deny all; # Deny by default
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
@@ -68,7 +68,7 @@ server {
 
 		rewrite ^/contributorportfolio/images/(.*) /images/contributor/$1 break; # Using a variable changes the way forward requests are created, rewrite used to fix - see https://tenzer.dk/nginx-with-dynamic-upstreams/
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/lbdownloads/en/ { # Lightbox download URL rule
@@ -79,7 +79,7 @@ server {
 
 		return 302 $scheme://$host/order-download-downloadhistory.asp;
 
-		include includes/subs_filter.conf; # Rewrite content for .com & .de http > https
+		include /etc/nginx/conf.d/includes/subs_filter.conf; # Rewrite content for .com & .de http > https
 	}
 
 	location ~* ^/(downloads/en/video|freedownloads)/ { # Download server rules video download request proxy to on-premise IIS server
@@ -123,5 +123,5 @@ server {
 		proxy_pass http://crm1_servers;
 	}
 
-	include includes/error_page.conf; # Include error page location blocks
+	include /etc/nginx/conf.d/includes/error_page.conf; # Include error page location blocks
 }
