--- a/enabled-sites/download.alamy.conf
+++ b/enabled-sites/download.alamy.conf
@@ -9,6 +9,8 @@ server { # $cdcidownload.alamy.* directly connects to web_servers:8080 via TC Ng
 
 	proxy_read_timeout 300s; # Increased timeout when waiting for response from backend server = 5 mins
 
+	status_zone $cdcidownload.alamy.all; # Shared memory zone for Nginx Plus dashboard to display stats for domains that match this Virtual Server config
+
 	location ~* ^/(a2d-image-download[.]asp|a2d-video-download[.]aspx) { # Download server API access
 		include /etc/nginx/conf.d/includes/ipsets/internal-networks; # Permit access from internal network IP ranges
 		include /etc/nginx/conf.d/includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
@@ -43,7 +45,7 @@ server { # $cdcidownload2.alamy.* directly connects to web_servers:8080 via TC N
 
 	listen 80;
 	listen 443 ssl http2;
-	server_name $cdcidownload2.alamy.com $cdcidownload2.alamy.de $cdcidownload2.alamy.es $cdcidownload2.alamy.it $cdcidownload2.alamyimages.fr;
+	server_name $cdcidownload.alamy.com $cdcidownload.alamy.de $cdcidownload.alamy.es $cdcidownload.alamy.it $cdcidownload.alamyimages.fr;
 
 	# Allow by default, block access from blacklisted IPs
 	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
