--- a/enabled-sites/intranet.alamy.com.conf
+++ b/enabled-sites/intranet.alamy.com.conf
@@ -1,16 +1,15 @@
 server { # Redirect http requests to https
 
 	listen 80;
-	server_name intranet.alamy.com intranet.alamy.de;
+	server_name $cdciintranet.alamy.com $cdciintranet.alamy.de;
 
 	include /etc/nginx/conf.d/includes/ipsets/internal-networks; # Permit access from internal network IP ranges
 	include /etc/nginx/conf.d/includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
 	deny all; # Deny by default
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
-	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
 
-	status_zone "intranet.alamy.com + .de"; # Shared memory zone for Nginx Plus dashboard to display stats for domains that match this Virtual Server config
+	status_zone "$cdciintranet.alamy.com + .de"; # Shared memory zone for Nginx Plus dashboard to display stats for domains that match this Virtual Server config
 
 	location ~* ^/(newsproxy|news/proxy)/ { # http exceptions in intranet for News Ruby on Rails applications that require SSL3 for https
 		proxy_pass http://crm1_servers;
@@ -25,7 +24,7 @@ server { # Redirect http requests to https
 server {
 
 	listen 443 ssl http2;
-	server_name intranet.alamy.com intranet.alamy.de;
+	server_name $cdciintranet.alamy.com $cdciintranet.alamy.de;
 
 	ssl_certificate	/etc/nginx/conf.d/Cert/AlamyLABS_SAN.pem; # Internal, trusted SSL for all domains
 	ssl_certificate_key	/etc/nginx/conf.d/Cert/AlamyLABS_SAN.key;
@@ -35,8 +34,7 @@ server {
 	deny all; # Deny by default
 
 	proxy_cache alamyweb_cache; # Use the cache area defined in the http config
-	proxy_cache_purge $purge_method; # Allow purge of cache using method defined in http config
-	set $eu_west_1_s3 "alamy-eu-west-1.s3.eu-west-1.amazonaws.com";
+	set $eu_west_1_s3 "test-alamy-eu-west-1.s3.eu-west-1.amazonaws.com";
 
 	proxy_read_timeout 900s; # Increased timeout when waiting for response from backend server = 15 mins
 
@@ -44,22 +42,20 @@ server {
 #	limit_req zone=http_req_limit burst=50 nodelay; # Default rate limit defined in http config
 #	limit_req zone=http_req_limit_exceptions burst=50 nodelay; # Excempted rate limit defined in http config
 
-	subs_filter http://(?!(rgdskvm)(03|04))([^"'>\n]+?)[.]alamy[.](com|de) https://$3.alamy.$4 ir; # Parses returned content to rewrite 'http://' as 'https://' excluding rgdskvm03/04 as it wont support https, by default only text/html files are changed
-
 	location = /blog { # Redirect intranet requests for /blog to web config site
-		return 301 https://www.alamy.com/blog/;
+		return 301 https://$cdcidomain.alamy.com/blog/;
 	}
 
 	location ~* ^/blog/ { # Redirect intranet requests for /blog/* to web config site
-		return 301 https://www.alamy.com$request_uri;
+		return 301 https://$cdcidomain.alamy.com$request_uri;
 	}
 
 	location ~* ^/contributor/help/stockimo[.](asp|aspx) { # Reverse proxy wpengine.com Contributor site exception
-		proxy_pass http://web_servers$upstream_type;
+		proxy_pass http://web_servers;
 	}
 
 	location ~* ^/contributor/ { # Redirect intranet requests for /contributor/ to web config site (/contributor redirected by backend servers to /contributor/)
-		return 301 https://www.alamy.com$request_uri;
+		return 301 https://$cdcidomain.alamy.com$request_uri;
 	}
 
 	location /contributorportfolio/images/ { # Reverse proxy Contributor Portfolio avatars stored in AWS S3
@@ -75,7 +71,7 @@ server {
 		proxy_pass http://lightbox_servers;
 	}
 
-	location ~ /downloads/?$ { # To redirect intranet.alamy.com/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
+	location ~ /downloads/?$ { # To redirect $cdciintranet.alamy.com/downloads/ to download history page, it was done from the default.asp page before (Thumbs Server)
 
 		return 302 $scheme://$host/order-download-downloadhistory.asp;
 
@@ -98,12 +94,7 @@ server {
 	}
 
 	location ~* ^/(search[.]html|classify-image[.]html|stock-photo/|search/|galleries/|free-stock-photo/|category/|categories/|fotos-bilder/|vsearch/|portfolio/) { # SearchWeb server rules
-		proxy_pass http://search_servers$upstream_type;
-	}
-
-	# Reports on separate CRM server site (port 8081) - ticket 210609
-	location ~* ^/(reports/templates/(mediarep[.]xml|mediauploaded[.]xml|mediabyref[.]xml|regrep[.]xml|reg-contributor[.]xml|imagestats[.]xml|imagest[.]xml|rejrate[.]xml|photographer_images[.]xml|footersurvey[.]xml|awaitingkeywording[.]xml|contrib-no-media[.]xml|metropolis[.]xml|account_balance[.]xml|contrib-nosale[.]xml|commission-sale[.]xml|commission-imgnum[.]xml|sspd-stats[.]xml|sspd-user[.]xml|photographer_images_quick[.]xml|keywordsbyuser[.]xml|cdsales[.]xml|selfbillcontribs[.]xml|notreatyrate[.]xml|difftaxresandcont[.]xml|whtonnextpayrun[.]xml|contribswithnotreatyrate[.]xml|mixcontribaddr[.]xml|contribschangingtaxresidency[.]xml|ukcontribswithnovatdetails[.]xml|invoicesonhold[.]xml|contribrepFirstSale[.]xml|contribsowedvat[.]xml|stockbyte[.]xml|emailtracking[.]xml|edreport1[.]xml|edreport2[.]xml|customerbalance[.]xml)|websurvey/amchartsGraph[.]aspx) {
-		proxy_pass http://tcsvrcrm21.alamy.com:8081;
+		proxy_pass http://search_servers;
 	}
 
 	location ~* ^/(reports|qcreports)/ { # Intranet appset1 rules
