--- a/enabled-sites/download.alamy.conf
+++ b/enabled-sites/download.alamy.conf
@@ -1,45 +1,4 @@
-server { # $cdcidownload.alamy.* directly connects to web_servers:8080 via TC Nginx used by API users
-
-	listen 80;
-	listen 443 ssl http2;
-	server_name $cdcidownload.alamy.com $cdcidownload.alamy.de $cdcidownload.alamy.es $cdcidownload.alamy.it $cdcidownload.alamyimages.fr;
-
-	# Allow by default, block access from blacklisted IPs
-	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
-
-	proxy_read_timeout 300s; # Increased timeout when waiting for response from backend server = 5 mins
-
-	location ~* ^/(a2d-image-download[.]asp|a2d-video-download[.]aspx) { # Download server API access
-		include /etc/nginx/conf.d/includes/ipsets/internal-networks; # Permit access from internal network IP ranges
-		include /etc/nginx/conf.d/includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
-		include /etc/nginx/conf.d/includes/ipsets/download-a2d; # Permit access from whitelisted 3rd parties to API
-		deny all; # Deny by default
-
-		proxy_pass http://download_servers;
-	}
-
-	location ~* ^/(a2d-acionline-image-download[.]asp|downloads/|freedownloads/) { # Download server API access
-		proxy_pass http://download_servers;
-	}
-
-	location ~* ^/thumbs/4/ { # Search thumbs rule
-		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $testc1; # Set valid Host header for connection to AWS thumbs server
-		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://$testc1;
-	}
-
-	location ~* ^/thumbs/ { # Thumbs rule
-		proxy_no_cache $host; # Proxy_no_cache will always be 'true' because $host always has a value, as a result content in this location will not be cached by Nginx
-		proxy_set_header Host $testc7; # Set valid Host header for connection to AWS thumbs server
-		proxy_ssl_server_name on; # Allows TLS connection to CloudFront which is SNI based
-		proxy_pass https://$testc7;
-	}
-
-	include /etc/nginx/conf.d/includes/error_page.conf; # Include error page location blocks
-}
-
-server { # $cdcidownload2.alamy.* directly connects to web_servers:8080 via TC Nginx
+server { # $cdcidownload.alamy.* directly connects to web_servers:8080 via TC Nginx
 
 	listen 80;
 	listen 443 ssl http2;
