--- a/enabled-sites/redirects.conf
+++ b/enabled-sites/redirects.conf
@@ -5,7 +5,7 @@ server { # Redirect all requests to domain zone apex to $cdcidomain.alamy.*
 	server_name alamy.* alamyimages.*;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	return 301 https://www.$host$request_uri;
 
@@ -18,7 +18,7 @@ server { # Redirect old de site to new
 	server_name $cdcidomainde.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	location ~* ^/stock-photo-(.*)[.]html { # Pass /stock-photo-*.html requests through so backend web servers can provide redirect in one request
 		proxy_pass http://web_servers;
@@ -44,7 +44,7 @@ server { # Redirect http requests to secure to https
 	server_name $cdcidomainsecure.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	return 301 https://$cdcidomainsecure.alamy.com$request_uri;
 
@@ -56,7 +56,7 @@ server { # Used for forum login API calls
 	server_name $cdcidomainsecure.alamy.com;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	location ~* ^/(logonheader[.]asp|forgotten-pwdheader[.]asp) { # secure.alamy.* page rules
 		proxy_pass http://web_servers;
@@ -74,7 +74,7 @@ server { # Redirect http requests to https
 	server_name $cdcidomain.alamy.pt;
 
 	# Allow by default, block access from blacklisted IPs
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	return 301 https://$host$request_uri;
 
@@ -85,10 +85,10 @@ server { # Redirect $cdcidomain.alamy.pt sites to $cdcidomain.alamy.com
 	listen 443 ssl http2;
 	server_name $cdcidomain.alamy.pt;
 
-	include includes/ipsets/blacklist; # Deny access from blacklisted IPs
+	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
 	location /category/ {
-		proxy_pass http://search_servers$upstream_type;
+		proxy_pass http://search_servers;
 	}
 
 	location ~* ^/((contactus|category)[.]aspx|terms/(terms|general)[.]aspx|robots[.]txt) {
@@ -113,8 +113,8 @@ server { # Redirect http requests to intranet.alamy.pt to https
 	listen 80;
 	server_name intranet.alamy.pt;
 
-	include includes/ipsets/internal-networks; # Permit access from internal network IP ranges
-	include includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
+	include /etc/nginx/conf.d/includes/ipsets/internal-networks; # Permit access from internal network IP ranges
+	include /etc/nginx/conf.d/includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
 	deny all; # Deny by default
 
 	return 301 https://intranet.alamy.com$request_uri;
@@ -126,15 +126,15 @@ server { # Redirect intranet.alamy.pt sites to intranet.alamy.com
 	listen 443 ssl http2;
 	server_name intranet.alamy.pt;
 
-	ssl_certificate	cert/AlamyLABS_SAN.pem; # Internal, trusted SSL for all domains
-	ssl_certificate_key	cert/AlamyLABS_SAN.key;
+	ssl_certificate	/etc/nginx/conf.d/Cert/AlamyLABS_SAN.pem; # Internal, trusted SSL for all domains
+	ssl_certificate_key	/etc/nginx/conf.d/Cert/AlamyLABS_SAN.key;
 
-	include includes/ipsets/internal-networks; # Permit access from internal network IP ranges
-	include includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
+	include /etc/nginx/conf.d/includes/ipsets/internal-networks; # Permit access from internal network IP ranges
+	include /etc/nginx/conf.d/includes/ipsets/alamy-offices; # Permit access from Alamy offices' external connections
 	deny all; # Deny by default
 
 	location /category/ {
-		proxy_pass http://search_servers$upstream_type;
+		proxy_pass http://search_servers;
 	}
 
 	location ~* ^/((contactus|category)[.]aspx|terms/(terms|general)[.]aspx) {
@@ -147,10 +147,10 @@ server { # Redirect intranet.alamy.pt sites to intranet.alamy.com
 
 	location ~* ^/fotos-imagens/(.*) { # Redirect requests for /fotos-imagens to equivalent /stock-photo at Nginx level
 
-		return 301 https://intranet.alamy.com/stock-photo/$1$is_args$args;
+		return 301 https://$cdciintranet.alamy.com/stock-photo/$1$is_args$args;
 	}
 
 	location / { # Redirect all other requests to Intranet.alamy.com
-		return 301 https://intranet.alamy.com$request_uri;
+		return 301 https://$cdciintranet.alamy.com$request_uri;
 	}
 }
